# CmakeTest

./: .gitignore  CMakeLists.txt  README.txt
src/MainApp/: CMakeLists.txt  main.cpp
src/Toolkit/: CMakeLists.txt
src/Toolkit/src/: Tool.cpp  Tool.h
